sup and sub strong and em element

--- a/index.html
+++ b/index.html
@@ -7,30 +7,18 @@
 
 </head>
 <body>
-    <!-- Setting ID for the top of the page -->
-    <a id="top"></a>
+    <!-- Sup and Sub -->
+    <h3> My 1 <sup>st</sup> and 2 <sub>nd</sub> Project </h3>
 
-    <!-- setting new html page  -->
-    <a href="about.html">About</a>
+    <!-- strong and em Element -->
+    <p>Lorem ipsum, dolor sit 
+        <strong>
+            amet consectetur adipisicing 
+        </strong>  elit. Eaque odio 
+        <em>
+            omnis soluta corporis reprehenderit nobis
 
-    <!-- image -->
-    <h3>Image of Sunset</h3>
-    <img src="/images/download.jpg" alt="image of sunset"> 
-    <br>
-    
-    <!-- hyperlinks   -->
-    <!-- Target attribute for newpage -->
-    <a href="https://www.youtube.com/" target="_blank">Click here to visit Youtube</a>
-    <br>
-
-
-    <!-- image inside hyperlink -->
-    <a href="https://www.youtube.com/" target="_blank">
-    <img src="/images/youtube.png" alt="gun images"> <br> on the image to go to website</a>
-    
-    <!-- enter -->
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <!-- Go to the top of the page -->
-    <a href="#top">top of the page</a>
+        </em>  ea! Harum necessitatibus modi excepturi.</p>
+   
 </body>
 </html>
