Ordered and unordered list

--- a/index.html
+++ b/index.html
@@ -7,18 +7,41 @@
 
 </head>
 <body>
-    <!-- Sup and Sub -->
-    <h3> My 1 <sup>st</sup> and 2 <sub>nd</sub> Project </h3>
 
-    <!-- strong and em Element -->
-    <p>Lorem ipsum, dolor sit 
-        <strong>
-            amet consectetur adipisicing 
-        </strong>  elit. Eaque odio 
-        <em>
-            omnis soluta corporis reprehenderit nobis
 
-        </em>  ea! Harum necessitatibus modi excepturi.</p>
+    <!-- order and unorderlist -->
+    <!--  -->
+    <!--  -->
+    
+    <!-- unorder list -->
+    <ul>
+       <li>Apple</li>
+       <li>orange</li>
+       <li>bannana</li>
+    </ul>
+    <ul>
+        <li><a href="#">Homepage</a></li>
+        <li><a href="about.html" target="_blank">About</a></li>
+        <li><a href="#">NextPage</a></li>
+
+    </ul>
+    <!-- Order list -->
+    <ol>
+        <li>asim</li>
+        <li>Ahmed</li>
+        <li>bilal</li>   
+    </ol>
+    <!-- Mixed order unorder list -->
+    <ul>
+        <li>Asim
+            <ol>
+                <li>HTML</li>
+                <li>CSS</li>
+            </ol>
+        </li>
+        <li>Ahmed</li>
+        <li>bilal</li>   
+    </ul>
    
 </body>
 </html>
