--- a/index.html
+++ b/index.html
@@ -9,39 +9,21 @@
 <body>
 
 
-    <!-- order and unorderlist -->
-    <!--  -->
-    <!--  -->
-    
-    <!-- unorder list -->
-    <ul>
-       <li>Apple</li>
-       <li>orange</li>
-       <li>bannana</li>
-    </ul>
-    <ul>
-        <li><a href="#">Homepage</a></li>
-        <li><a href="about.html" target="_blank">About</a></li>
-        <li><a href="#">NextPage</a></li>
+    <!-- Tables -->
+    <table style="width:100%">
+        <tr>
+            <th>Some info</th>
+            <th>Some info</th>
+            <th>Some info</th>
+        </tr>
+        <tr>
+            <td>Asim</td>
+            <td>Abdullah</td>
+            <td>Bilal</td>
+        </tr>
 
-    </ul>
-    <!-- Order list -->
-    <ol>
-        <li>asim</li>
-        <li>Ahmed</li>
-        <li>bilal</li>   
-    </ol>
-    <!-- Mixed order unorder list -->
-    <ul>
-        <li>Asim
-            <ol>
-                <li>HTML</li>
-                <li>CSS</li>
-            </ol>
-        </li>
-        <li>Ahmed</li>
-        <li>bilal</li>   
-    </ul>
+    </table>
+   
    
 </body>
 </html>
