Forms - input and submit Elements

--- a/index.html
+++ b/index.html
@@ -8,22 +8,35 @@
 </head>
 <body>
 
+   <br>
+   <br>
+   <!-- forms-input and submit Elements -->
+   <form action="" method="">
+       <!-- label to heighlight the for = given id -->
+    <label for="fname">first name</label> 
+    <!-- input types >text,email,password,submit -->
+    <!-- input name > for submitting and validating data -->
+    <!-- input id > for giving id tag to input -->
+    <!-- input placeholdet for showing data in the field
+     -->
+     <!-- input value > give hard value to the field -->
+    <input type="text" name="" placeholder="first name" id="fname">
 
-    <!-- Tables -->
-    <table style="width:100%">
-        <tr>
-            <th>Some info</th>
-            <th>Some info</th>
-            <th>Some info</th>
-        </tr>
-        <tr>
-            <td>Asim</td>
-            <td>Abdullah</td>
-            <td>Bilal</td>
-        </tr>
+    <br>
+    <label for="lname">last name</label> 
+    <input type="text" name="" placeholder="last name" id="lname">
 
-    </table>
-   
+    <br>
+    <label for="em">email</label> 
+    <input type="email" name="" placeholder="abc@mail.com" value="@gmail.com" id="em">
+
+    <br>
+    <input type="password"
+    placeholder="Enter pasword">
+    <br>
+    <input type="submit" id="but">
+    
+    </form>
    
 </body>
 </html>
