--- a/index.html
+++ b/index.html
@@ -12,30 +12,46 @@
    <br>
    <!-- forms-input and submit Elements -->
    <form action="" method="">
-       <!-- label to heighlight the for = given id -->
-    <label for="fname">first name</label> 
-    <!-- input types >text,email,password,submit -->
-    <!-- input name > for submitting and validating data -->
-    <!-- input id > for giving id tag to input -->
-    <!-- input placeholdet for showing data in the field
-     -->
-     <!-- input value > give hard value to the field -->
-    <input type="text" name="" placeholder="first name" id="fname">
 
     <br>
-    <label for="lname">last name</label> 
-    <input type="text" name="" placeholder="last name" id="lname">
-
+    <!-------------------------------------->
+    <!-- ----------Text area --------------->
+    <!-------------------------------------->
+    <p>Description</p>
+    <textarea name="" id="" cols="30" rows="10"></textarea>
     <br>
-    <label for="em">email</label> 
-    <input type="email" name="" placeholder="abc@mail.com" value="@gmail.com" id="em">
-
+    <!-------------------------------------->
+    <!----------- Radio button------------ -->
+    <!-------------------------------------->
+    <p>Please select your fav coding language?</p>
+    <input type="radio" name="coding" value="JS">JaS
     <br>
-    <input type="password"
-    placeholder="Enter pasword">
+    <input type="radio" name="coding" value="Python">Python
     <br>
-    <input type="submit" id="but">
-    
+    <input type="radio" name="coding" value="java">Java
+    <br>
+    <!-------------------------------------->
+    <!----------- Checkbox------------ -->
+    <!-------------------------------------->
+    <p>Please select your fav coding language?</p>
+    <input type="checkbox" name="coding2" checked value="JS">JaS
+    <br>
+    <input type="checkbox" name="coding2" value="Python">Python
+    <br>
+    <input type="checkbox" name="coding2" value="java">Java
+    <br>
+    <!-------------------------------------->
+    <!----------- SelectBox------------ -->
+    <!-------------------------------------->
+    <p>Please select your fav coding language?</p>
+    <select name="languages" id="">
+        <option value="JS">Javascript</option>
+        <option value="Python">Python</option>
+        <option value="Java">Java</option>
+    </select>
+    <br>
+    <br>
+    <input type="submit" value="Please Submit">
     </form>
    
 </body>
